k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saysmile
  labels:
    app.kubernetes.io/managed-by: kubectl
    project: saysmile-dental
